@@ -9,8 +9,9 @@
 }
 
 \usage{
-argsTip(name, only.args = FALSE)
-callTip(code, only.args = FALSE, location = FALSE)
+argsTip(name, only.args = FALSE, width = getOption("width"))
+callTip(code, only.args = FALSE, location = FALSE, description = FALSE,
+    methods = FALSE, width = getOption("width"))
 }
 
 \arguments{
@@ -20,12 +21,22 @@ callTip(code, only.args = FALSE, location = FALSE)
   \item{only.args}{ do we return only arguments of the function
     (\code{arg1, arg2 = TRUE, ...}), or the full call, like
     (\code{myfun(arg1, arg2 = TRUE, ...)}). }
+  \item{width}{ reformat the tip to fit that width, except if
+    \code{width = NULL}. }
   \item{location}{ if \code{TRUE} then the location (in which package the
     function resides) is appended to the calltip between square brackets. }
+  \item{description}{ if \code{TRUE} then a short description of the function is
+    added to the callTip (in fact, the title of the corresponding help page, if
+    it exists). }
+  \item{methods}{ if \code{TRUE} then a short message indicating if this is a
+    generic function and that lists, in this case, available methods. }
 }
 
 \value{
-  A string with the calling syntax of the function.
+  A string with the calling syntax of the function, plus additional information,
+  depending on the flag used. Note that \code{methods} can considerably slow
+  down the execution, especially for generic functions that have many methods
+  like \code{print()}, or \code{summary}!
 }
 
 \author{ Philippe Grosjean <phgrosjean@sciviews.org> }
