@@ -13,7 +13,7 @@
     Package: \tab svMisc\cr
     Type: \tab Package\cr
     Version: \tab 0.9-60\cr
-    Date: \tab 2009-09-05\cr
+    Date: \tab 2010-09-11\cr
     License: \tab GPL 2 or above, at your convenience\cr
   }
   % TODO: add description of main functions here. Also add examples
